--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/x-charts": "^7.18.0",
     "@mui/x-data-grid": "^7.18.0",
     "@mui/x-date-pickers": "^7.18.0",
+    "cytoscape": "^3.30.2",
     "dayjs": "^1.11.13",
     "firebase": "^10.13.2",
     "formik": "^2.4.6",
@@ -34,6 +35,7 @@
     "material-ui-confirm": "^3.0.16",
     "mermaid": "^11.2.1",
     "react": "^18.3.1",
+    "react-cytoscapejs": "^2.0.0",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-firebase-hooks": "^5.1.1",
